added links and some changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web lesson</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="/atjmm/img/bg/iMac.png">
   </head>
   <body>
     <div class="wrapper">
@@ -28,21 +29,6 @@
             <div class="science__name">
               Axborot texnologiyalari va jarayonlarni matematik modellashtirish
             </div>
-            <!-- <div class="learn__button">
-              <button class="button">
-                <h3>
-                  WEB DARSLIKNING <br />
-                  VAZIFASI
-                </h3>
-                <h4>
-                  Ushbu WEB darslikning asosiy yutug'i bu faqatgina bitta
-                  OS(android, iOS, desktop, windows, macOS, linux ...) bilan
-                  cheklanib qolmagan holda internet tarmog'iga ulanish
-                  imkoniyatiga ega bo'lgan har qanday qurilma(hoh televizor, hoh
-                  telefon, hoh avtomobil monitori) orgali foydalanish imkoniyati
-                </h4>
-              </button>
-            </div> -->
           </div>
         </div>
       </header>
@@ -58,7 +44,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item" title="Metodik ko'rsatmani yuklab olish">
-                <a href="/temp/AT va JMM oquv qollanma охирги.pdf">
+                <a href="/atjmm/temp/metodikKo'rsatma.pdf">
                   O'quv qo'llanma
                   <img
                     src="img/icons/download icon.png"
@@ -76,7 +62,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item">
-                <a href="/temp/1_ma'ruza (АTJMM tshunchasi).pdf">
+                <a href="/atjmm/temp/1_ma'ruza (АTJMM tshunchasi).pdf">
                   1-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -87,7 +73,7 @@
               </li>
               <li class="list__item">
                 <a
-                  href="/temp/2_ma'ruza (AKT_va_tizimlari_Hardware, Software).pdf"
+                  href="/atjmm/temp/2_ma'ruza (AKT_va_tizimlari_Hardware, Software).pdf"
                   >2-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -98,7 +84,7 @@
               </li>
               <li class="list__item">
                 <a
-                  href="/temp/3-ma'ruza (MS-DOS, Windows, Mac, Linux, Unix, IOS).pdf"
+                  href="/atjmm/temp/3-ma'ruza (MS-DOS, Windows, Mac, Linux, Unix, IOS).pdf"
                   >3-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -109,7 +95,7 @@
               </li>
               <li class="list__item">
                 <a
-                  href="/temp/4_MA'RUZA;_Internet_tehnologiyalari_va_ularning_rivojlanishi.pdf"
+                  href="/atjmm/temp/4_MA'RUZA;_Internet_tehnologiyalari_va_ularning_rivojlanishi.pdf"
                   >4-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -119,7 +105,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/temp/5-ma'ruza (Algoritm).pdf">
+                <a href="/atjmm/temp/5-ma'ruza (Algoritm).pdf">
                   5-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -129,7 +115,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/temp/6-ma'ruza (C++, JAVA, Python).pdf">
+                <a href="/atjmm/temp/6-ma'ruza (C++, JAVA, Python).pdf">
                   6-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -139,7 +125,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/temp/7-ma'ruza (C++_dasturlash_tilining).pdf">
+                <a href="/atjmm/temp/7-ma'ruza (C++_dasturlash_tilining).pdf">
                   7-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -150,7 +136,7 @@
               </li>
               <li class="list__item">
                 <a
-                  href="/temp/8-ma'ruza ( C++ dasturlash tilida chiziqli algoritmlar).pdf"
+                  href="/atjmm/temp/8-ma'ruza ( C++ dasturlash tilida chiziqli algoritmlar).pdf"
                 >
                   8-taqdimot
                   <img
@@ -161,7 +147,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/temp/9-ma'ruza (Tarmok algoritm).pdf">
+                <a href="/atjmm/temp/9-ma'ruza (Tarmok algoritm).pdf">
                   9-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -171,7 +157,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/temp/10-ma'ruza (Takror algoritm).pdf">
+                <a href="/atjmm/temp/10-ma'ruza (Takror algoritm).pdf">
                   10-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -188,44 +174,44 @@
               <img src="img/icons/close_box_red.png" alt="" />
             </div>
             <div class="all-videos">
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/1.png" alt="">
+              <a href="https://mover.uz/watch/c3QF8jfH?list=NwkmgJCl">
+                <img src="/atjmm/temp/video/vm/videoIMG/1.png" alt="">
                 1-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/2.png" alt="">
+              <a href="https://mover.uz/watch/b16nLpkC?list=NwkmgJCl">
+                <img src="/atjmm/temp/video/vm/videoIMG/2.png" alt="">
                 2-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/3.png" alt="">
+              <a href="https://mover.uz/watch/zsJrelEX">
+                <img src="/atjmm/temp/video/vm/videoIMG/3.png" alt="">
                 3-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/4.png" alt="">
+              <a href="https://mover.uz/watch/cvQMlV6S">
+                <img src="/atjmm/temp/video/vm/videoIMG/4.png" alt="">
                 4-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/5.png" alt="">
+              <a href="https://mover.uz/watch/vICRYwlk">
+                <img src="/atjmm/temp/video/vm/videoIMG/5.png" alt="">
                 5-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/6.png" alt="">
+              <a href="https://mover.uz/watch/vtTYMMj">
+                <img src="/atjmm/temp/video/vm/videoIMG/6.png" alt="">
                 6-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/7.png" alt="">
+              <a href="https://mover.uz/watch/TnIdC2J0">
+                <img src="/atjmm/temp/video/vm/videoIMG/7.png" alt="">
                 7-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/8.png" alt="">
+              <a href="https://mover.uz/watch/VWWWc20f">
+                <img src="/atjmm/temp/video/vm/videoIMG/8.png" alt="">
                 8-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/9.png" alt="">
+              <a href="https://mover.uz/watch/0PRoA8Mm">
+                <img src="/atjmm/temp/video/vm/videoIMG/9.png" alt="">
                 9-ma'ruza
               </a>
-              <a href="#">
-                <img src="/temp/video/vm/videoIMG/10.png" alt="">
+              <a href="https://mover.uz/watch/faquA9AW">
+                <img src="/atjmm/temp/video/vm/videoIMG/10.png" alt="">
                 10-ma'ruza
               </a>
             </div>
@@ -237,7 +223,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item">
-                <a href="/temp/Методик курсатма(АИ ва АТ).pdf"
+                <a href="/atjmm/temp/metodikKo'rsatma.pdf"
                   >Metodik ko'rsatma</a
                 >
                 <img
@@ -255,28 +241,28 @@
             </div>
             <div class="all-videos">
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/1.png" alt="">1-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/1.png" alt="">1-laboratoriya
               </a>
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/2.png" alt="">2-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/2.png" alt="">2-laboratoriya
               </a>
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/3.png" alt="">3-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/3.png" alt="">3-laboratoriya
               </a>
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/4.png" alt="">4-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/4.png" alt="">4-laboratoriya
               </a>
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/5.png" alt="">5-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/5.png" alt="">5-laboratoriya
               </a>
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/6.png" alt="">6-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/5.png" alt="">6-laboratoriya
               </a>
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/7.png" alt="">7-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/7.png" alt="">7-laboratoriya
               </a>
               <a href="#">
-                <img src="/temp/video/lab/videoIMG/8.png" alt="">8-laboratoriya
+                <img src="/atjmm/temp/video/lab/videoIMG/8.png" alt="">8-laboratoriya
               </a>
             </div>
           </div>
@@ -359,8 +345,6 @@
                 <div class="text b_test">
                   <h4>Test</h4>
                 </div>
-
-                <!-- quiz -->
               </div>
             </div>
           </div>
@@ -373,7 +357,7 @@
             <h1>Muallif</h1>
             <div class="muallif__info">
               <div class="img">
-                <img src="/img/Abdullayev.jpeg" alt="" />
+                <img src="/atjmm/img/Abdullayev.jpeg" alt="" />
               </div>
               <div class="text">
                 <h1>Abdullayev Zafar Sayfutdinovich</h1>
@@ -393,14 +377,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/script.js"></script>
-
-    <!-- <script>
-      var vatchVideo = getElementById('videoWatch');
-      var myVideo = getElementById('myVideo');
-
-      function stopVideo(e) {
-        vatchVideo.style.display = "none"
-      }
-    </script> -->
   </body>
 </html>
