--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item">
-                <a href="/atjmm/temp/metodikKo'rsatma.pdf"
+                <a href="/temp/metodikKo'rsatma.pdf"
                   >Metodik ko'rsatma</a
                 >
                 <img
