--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>web lesson</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="/atjmm/img/bg/iMac.png">
+    <link rel="icon" href="/atjmm/img/bg/iMac.png" />
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
         <div class="container">
           <div class="blur"></div>
-          <div class="hedear__top">
+          <div class="header__top">
             <div class="header__logo">
               <img src="img/icons/logo.png" alt="" title="TIIAME" />
             </div>
@@ -44,7 +44,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item" title="Metodik ko'rsatmani yuklab olish">
-                <a href="/atjmm/temp/metodikKo'rsatma.pdf">
+                <a href="">
                   O'quv qo'llanma
                   <img
                     src="img/icons/download icon.png"
@@ -62,7 +62,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item">
-                <a href="/atjmm/temp/1_ma'ruza (АTJMM tshunchasi).pdf">
+                <a href="">
                   1-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -72,9 +72,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a
-                  href="/atjmm/temp/2_ma'ruza (AKT_va_tizimlari_Hardware, Software).pdf"
-                  >2-taqdimot
+                <a href="">2-taqdimot
                   <img
                     src="img/icons/download icon.png"
                     title="download"
@@ -83,9 +81,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a
-                  href="/atjmm/temp/3-ma'ruza (MS-DOS, Windows, Mac, Linux, Unix, IOS).pdf"
-                  >3-taqdimot
+                <a href="">3-taqdimot
                   <img
                     src="img/icons/download icon.png"
                     title="download"
@@ -94,9 +90,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a
-                  href="/atjmm/temp/4_MA'RUZA;_Internet_tehnologiyalari_va_ularning_rivojlanishi.pdf"
-                  >4-taqdimot
+                <a href="">4-taqdimot
                   <img
                     src="img/icons/download icon.png"
                     title="download"
@@ -105,7 +99,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/atjmm/temp/5-ma'ruza (Algoritm).pdf">
+                <a href="">
                   5-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -115,7 +109,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/atjmm/temp/6-ma'ruza (C++, JAVA, Python).pdf">
+                <a href="">
                   6-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -125,7 +119,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/atjmm/temp/7-ma'ruza (C++_dasturlash_tilining).pdf">
+                <a href="">
                   7-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -135,9 +129,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a
-                  href="/atjmm/temp/8-ma'ruza ( C++ dasturlash tilida chiziqli algoritmlar).pdf"
-                >
+                <a href="">
                   8-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -147,7 +139,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/atjmm/temp/9-ma'ruza (Tarmok algoritm).pdf">
+                <a href="">
                   9-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -157,7 +149,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="/atjmm/temp/10-ma'ruza (Takror algoritm).pdf">
+                <a href="">
                   10-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -174,44 +166,60 @@
               <img src="img/icons/close_box_red.png" alt="" />
             </div>
             <div class="all-videos">
-              <a href="https://mover.uz/watch/c3QF8jfH?list=NwkmgJCl">
-                <img src="/atjmm/temp/video/vm/videoIMG/1.png" alt="">
+              <a href="https://mover.uz/watch/c3QF8jfH?list=NwkmgJCl" >
+                <img src="/temp/video/vm/videoIMG/1.png" alt="" />
                 1-ma'ruza
               </a>
               <a href="https://mover.uz/watch/b16nLpkC?list=NwkmgJCl">
-                <img src="/atjmm/temp/video/vm/videoIMG/2.png" alt="">
+                <img src="/temp/video/vm/videoIMG/2.png" alt="" />
                 2-ma'ruza
               </a>
               <a href="https://mover.uz/watch/zsJrelEX">
-                <img src="/atjmm/temp/video/vm/videoIMG/3.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/3.png"
+                  alt=""/>
                 3-ma'ruza
               </a>
               <a href="https://mover.uz/watch/cvQMlV6S">
-                <img src="/atjmm/temp/video/vm/videoIMG/4.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/4.png"
+                  alt=""/>
                 4-ma'ruza
               </a>
               <a href="https://mover.uz/watch/vICRYwlk">
-                <img src="/atjmm/temp/video/vm/videoIMG/5.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/5.png"
+                  alt=""/>
                 5-ma'ruza
               </a>
               <a href="https://mover.uz/watch/vtTYMMj">
-                <img src="/atjmm/temp/video/vm/videoIMG/6.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/6.png"
+                  alt=""/>
                 6-ma'ruza
               </a>
               <a href="https://mover.uz/watch/TnIdC2J0">
-                <img src="/atjmm/temp/video/vm/videoIMG/7.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/7.png"
+                  alt=""/>
                 7-ma'ruza
               </a>
               <a href="https://mover.uz/watch/VWWWc20f">
-                <img src="/atjmm/temp/video/vm/videoIMG/8.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/8.png"
+                  alt=""/>
                 8-ma'ruza
               </a>
               <a href="https://mover.uz/watch/0PRoA8Mm">
-                <img src="/atjmm/temp/video/vm/videoIMG/9.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/9.png"
+                  alt=""/>
                 9-ma'ruza
               </a>
               <a href="https://mover.uz/watch/faquA9AW">
-                <img src="/atjmm/temp/video/vm/videoIMG/10.png" alt="">
+                <img
+                  src="/temp/video/vm/videoIMG/10.png"
+                  alt=""/>
                 10-ma'ruza
               </a>
             </div>
@@ -223,9 +231,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item">
-                <a href="/temp/metodikKo'rsatma.pdf" download
-                  >Metodik ko'rsatma</a
-                >
+                <a href="/temp/metodikKo'rsatma.pdf" download>Metodik ko'rsatma</a>
                 <img
                   src="img/icons/download icon.png"
                   title="download"
@@ -240,29 +246,53 @@
               <img src="img/icons/close_box_red.png" alt="" />
             </div>
             <div class="all-videos">
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/1.png" alt="">1-laboratoriya
+              <a href="https://mover.uz/watch/2gReOP0E" download>
+                <img
+                  src="/temp/video/lab/videoIMG/1.png"
+                  alt=""
+                />1-laboratoriya
               </a>
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/2.png" alt="">2-laboratoriya
+              <a href="https://mover.uz/watch/8mF3VkvQ" download>
+                <img
+                  src="/temp/video/lab/videoIMG/2.png"
+                  alt=""
+                />2-laboratoriya
               </a>
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/3.png" alt="">3-laboratoriya
+              <a href="https://mover.uz/watch/ytRb3DPH" download>
+                <img
+                  src="/temp/video/lab/videoIMG/3.png"
+                  alt=""
+                />3-laboratoriya
               </a>
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/4.png" alt="">4-laboratoriya
+              <a href="https://mover.uz/watch/czZFcpum" download>
+                <img
+                  src="/temp/video/lab/videoIMG/4.png"
+                  alt=""
+                />4-laboratoriya
               </a>
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/5.png" alt="">5-laboratoriya
+              <a href="https://mover.uz/watch/XtuvFhzS" download>
+                <img
+                  src="/temp/video/lab/videoIMG/5.png"
+                  alt=""
+                />5-laboratoriya
               </a>
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/5.png" alt="">6-laboratoriya
+              <a href="https://mover.uz/watch/1NqaeKio" download>
+                <img
+                  src="/temp/video/lab/videoIMG/6.png"
+                  alt=""
+                />6-laboratoriya
               </a>
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/7.png" alt="">7-laboratoriya
+              <a href="https://mover.uz/watch/cNJu9l3" download>
+                <img
+                  src="/temp/video/lab/videoIMG/7.png"
+                  alt=""
+                />7-laboratoriya
               </a>
-              <a href="#">
-                <img src="/atjmm/temp/video/lab/videoIMG/8.png" alt="">8-laboratoriya
+              <a href="https://mover.uz/watch/gkBArC2r" download>
+                <img
+                  src="/temp/video/lab/videoIMG/8.png"
+                  alt=""
+                />8-laboratoriya
               </a>
             </div>
           </div>
@@ -357,7 +387,7 @@
             <h1>Muallif</h1>
             <div class="muallif__info">
               <div class="img">
-                <img src="/atjmm/img/Abdullayev.jpeg" alt="" />
+                <img src="/img/Abdullayev.jpeg" alt="" />
               </div>
               <div class="text">
                 <h1>Abdullayev Zafar Sayfutdinovich</h1>
