--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               <h4 class="name__of__box">Test</h4>
               <img src="img/icons/close_box_red.png" alt="" />
             </div>
-            <a href="/quiz/quiz-test.html"> Testni boshlash</a>
+            <a href="/quiz/quiz-test.html">Testni boshlash</a>
           </div>
 
           <div class="content__boxes">
@@ -311,8 +311,8 @@
                   <img src="img/icons/maruza.png" alt="" />
                 </div>
               </div>
-              <div class="box__bottom download__button">
-                <div class="text b_maruza">
+              <div class="box__bottom download__button b_maruza">
+                <div class="text">
                   <h4>O'quv qo'llanma</h4>
                 </div>
               </div>
@@ -323,8 +323,8 @@
                   <img src="img/icons/present.png" alt="" />
                 </div>
               </div>
-              <div class="box__bottom download__button">
-                <div class="text b_present">
+              <div class="box__bottom download__button b_present">
+                <div class="text">
                   <h4>Taqdimot</h4>
                 </div>
               </div>
@@ -335,8 +335,8 @@
                   <img src="img/icons/video.png" alt="" />
                 </div>
               </div>
-              <div class="box__bottom download__button">
-                <div class="text b_video">
+              <div class="box__bottom download__button b_video">
+                <div class="text">
                   <h4>Video ma'ruza</h4>
                 </div>
               </div>
@@ -347,8 +347,8 @@
                   <img src="img/icons/amaliy.png" alt="" />
                 </div>
               </div>
-              <div class="box__bottom download__button">
-                <div class="text b_amaliy">
+              <div class="box__bottom download__button b_amaliy">
+                <div class="text">
                   <h4>Amaliy mashg'ulot</h4>
                 </div>
               </div>
@@ -359,8 +359,8 @@
                   <img src="img/icons/lab.png" alt="" />
                 </div>
               </div>
-              <div class="box__bottom download__button">
-                <div class="text b_lab">
+              <div class="box__bottom download__button b_lab">
+                <div class="text">
                   <h4>Laboratoriya</h4>
                 </div>
               </div>
@@ -371,8 +371,8 @@
                   <img src="img/icons/test.png" alt="" />
                 </div>
               </div>
-              <div class="box__bottom download__button">
-                <div class="text b_test">
+              <div class="box__bottom download__button b_test">
+                <div class="text">
                   <h4>Test</h4>
                 </div>
               </div>
