change text style

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item">
-                <a href="">
+                <a href="/temp/1_ma'ruza (АTJMM tshunchasi).pdf" download>
                   1-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -72,7 +72,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">2-taqdimot
+                <a href="/temp/2_ma'ruza (AKT_va_tizimlari_Hardware, Software).pdf" download>2-taqdimot
                   <img
                     src="img/icons/download icon.png"
                     title="download"
@@ -81,7 +81,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">3-taqdimot
+                <a href="/temp/3-ma'ruza (MS-DOS, Windows, Mac, Linux, Unix, IOS).pdf" download>3-taqdimot
                   <img
                     src="img/icons/download icon.png"
                     title="download"
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">4-taqdimot
+                <a href="/temp/4_MA'RUZA;_Internet_tehnologiyalari_va_ularning_rivojlanishi.pdf" download>4-taqdimot
                   <img
                     src="img/icons/download icon.png"
                     title="download"
@@ -99,7 +99,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">
+                <a href="/temp/5-ma'ruza (Algoritm).pdf" download>
                   5-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -109,7 +109,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">
+                <a href="/temp/6-ma'ruza (C++, JAVA, Python).pdf" download>
                   6-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -119,7 +119,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">
+                <a href="/temp/7-ma'ruza (C++_dasturlash_tilining).pdf" download>
                   7-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -129,7 +129,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">
+                <a href="/temp/8-ma'ruza ( C++ dasturlash tilida chiziqli algoritmlar).pdf" download>
                   8-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -139,7 +139,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">
+                <a href="/temp/9-ma'ruza (Tarmok algoritm).pdf" download>
                   9-taqdimot
                   <img
                     src="img/icons/download icon.png"
@@ -149,7 +149,7 @@
                 </a>
               </li>
               <li class="list__item">
-                <a href="">
+                <a href="/temp/10-ma'ruza (Takror algoritm).pdf" download>
                   10-taqdimot
                   <img
                     src="img/icons/download icon.png"
