--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <ul class="download__links">
               <li class="list__item" title="Metodik ko'rsatmani yuklab olish">
-                <a href="/temp/AT va JMM oquv qollanma охирги.pdf" download>
+                <a href="/temp/o'quvQo'llanma.pdf" download>
                   O'quv qo'llanma
                   <img
                     src="img/icons/download icon.png"
